@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2008-2010 by Walter Brisken                             *
+ *   Copyright (C) 2008-2011 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -28,6 +28,7 @@
  *==========================================================================*/
 
 #include <stdio.h>
+#include <stdlib.h>
 #include "difxmessage.h"
 
 int main(int argc, char **argv)
@@ -55,5 +56,5 @@ int main(int argc, char **argv)
 		}
 	}
 
-	return 0;
+	return EXIT_SUCCESS;
 }
